@@ -1,5 +1,6 @@
 2003-12-05  Jakub Steiner <jimmac@ximian.com>
 
+   * {16x16,24x24,32x32,48x48}/stock/data/Makefile.am
 	* 16x16/stock/data/stock_signature-bad.png
 	* 16x16/stock/data/stock_signature-ok.png
 	* 16x16/stock/data/stock_signature.png
